fix extra space in some cases

--- a/cell/src/main/resources/jetbrains/jetpad/cell/dom/style.css
+++ b/cell/src/main/resources/jetbrains/jetpad/cell/dom/style.css
@@ -30,10 +30,12 @@
 
 .vertical > div {
   display: block;
+  font-size: 0px;
 }
 
 .horizontal > div > .vertical {
   display: inline-block;
+  font-size: 0px;
 }
 
 .indented {
